# adv_mla_lab2_2

./: Makefile  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
models/: adaboost_default.joblib  scaler.joblib
notebooks/: adv_mla_2_adaboost.ipynb  adv_mla_lab2_2.ipynb
